--- a/app/components/registration-form/registration-form.pug
+++ b/app/components/registration-form/registration-form.pug
@@ -83,8 +83,8 @@ mixin registration-form(data)
             +nd-grid-col({xl: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
                 +nd-form-box('Date of birth').js-nd-datepicker
-                  +nd-input(type="text" name="firstName" placeholder="Date of birth" required readonly)._date
-                  +e.calendar(data-dates-container)
+                  +nd-input(type="text" name="firstName" placeholder="Date of birth" data-dates-result required readonly)._date
+                  +e.dates(data-dates-container)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
                 +nd-form-box('Nationality')
@@ -181,8 +181,8 @@ mixin registration-form(data)
             +nd-grid-col({xl: 12})
               +form-section-wrapper
                 +nd-form-box('Date of birth').js-nd-datepicker
-                  +nd-input(type="text" name="firstName" placeholder="Date of birth" required readonly)._date
-                  +e.calendar(data-dates-container)
+                  +nd-input(type="text" name="firstName" placeholder="Date of birth" data-dates-result required readonly)._date
+                  +e.dates(data-dates-container)
         +e.buttons
           +nd-button('button', true).__button_wide(type="submit")
             span(data-form-switchable-item="privatePerson") Continue
@@ -283,8 +283,8 @@ mixin registration-form-summary(data)
             +nd-grid-col({xl: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
                 +nd-form-box('Date of birth').js-nd-datepicker
-                  +nd-input(type="text" name="firstName" placeholder="Date of birth" required readonly)._date
-                  +e.calendar(data-dates-container)
+                  +nd-input(type="text" name="firstName" placeholder="Date of birth" data-dates-result required readonly)._date
+                  +e.dates(data-dates-container)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
                 +nd-form-box('Nationality')
@@ -381,8 +381,8 @@ mixin registration-form-summary(data)
             +nd-grid-col({xl: 12})
               +form-section-wrapper
                 +nd-form-box('Date of birth').js-nd-datepicker
-                  +nd-input(type="text" name="firstName" placeholder="Date of birth" required readonly)._date
-                  +e.calendar(data-dates-container)
+                  +nd-input(type="text" name="firstName" placeholder="Date of birth" data-dates-result required readonly)._date
+                  +e.dates(data-dates-container)
         +e.buttons
           +nd-button('button', true).__button_wide(type="submit")
             span(data-form-switchable-item="privatePerson") Continue
