--- a/app/components/registration-form/registration-form.scss
+++ b/app/components/registration-form/registration-form.scss
@@ -47,6 +47,14 @@
       }
     }
 
+    &__text {
+      text-align: center;
+
+      #{$b}__header_tal & {
+        text-align: left;
+      }
+    }
+
     &__selection {
       &:not(:first-child) {
         margin-top: 88px;
@@ -64,7 +72,7 @@
         }
 
         @include screen('sm', max, 2) {
-          margin-top: pxtovw(36, 375);
+          margin-top: pxtovw(37, 375);
         }
       }
     }
@@ -85,7 +93,7 @@
       }
 
       @include screen('sm', max, 2) {
-        margin-top: pxtovw(2, 375);
+        margin-top: pxtovw(10, 375);
       }
     }
   }
@@ -116,7 +124,7 @@
     }
 
     @include screen('sm') {
-      padding: pxtovw(14, 375) 0;
+      padding: pxtovw(15, 375) 0;
       margin-top: pxtovw(60, 375);
       flex-wrap: wrap;
     }
